--- a/src/components/filter/filter.module.scss
+++ b/src/components/filter/filter.module.scss
@@ -1,11 +1,14 @@
+@import "src/services/style/variables";
 .filter {
   margin-right: 20px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   .title_wrapper {
     margin-bottom: 20px;
     h2 {
       font-size: 12px;
+      font-family: $main_font;
       font-weight: 600;
       line-height: 12px;
       letter-spacing: 0.5px;
@@ -20,6 +23,7 @@
     padding-left: 30px;
     label {
       display: block;
+      font-family: $main_font;
       font-size: 13px;
       font-weight: 400;
       line-height: 20px;
@@ -38,15 +42,15 @@
       height: 20px;
       width: 20px;
       border-radius: 2px;
-      border: 1px solid #9abbce;
+      border: 1px solid $checkbox_border_color;
       top: 0;
       left: 0;
       cursor: pointer;
     }
     .checkbox_custom:checked + label::before {
       background: url('checked.svg') center center no-repeat;
-      box-shadow: 0 2px 8px 0 #0000001A;
-      border-color: #2196F3;
+      box-shadow: 0 2px 8px 0 $active_shadow_color;
+      border-color: $active_color;
     }
   }
 }
