API request whith redux rebuild

--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -57,5 +57,14 @@
       letter-spacing: 0;
       text-align: left;
     }
+    .route {
+      width: 11.7vw;
+    }
+    .length {
+      width: 11.7vw;
+    }
+    .stops {
+      width: 11.7vw;
+    }
   }
 }
