--- a/src/services/style/variables.scss
+++ b/src/services/style/variables.scss
@@ -3,3 +3,4 @@ $inactive_color: #a0b0b9;
 $active_shadow_color: rgba(0, 0, 0, 0.1);
 $checkbox_border_color:#9abbce;
 $main_font: 'Open Sans', sans-serif;
+$button_border_radius:10px;
