--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -2,13 +2,14 @@
 .card {
   display: flex;
   flex-direction: column;
-  padding: 0 20px;
-  margin-bottom: 40px;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: white;
+  border-radius: $border_radius;
   .title_wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 0;
     .price {
       span {
         font-size: 24px;
@@ -35,10 +36,12 @@
       display: flex;
       justify-content: space-between;
       margin-bottom: 10px;
+      flex-shrink:1;
     }
     .description_arrival {
       display: flex;
       justify-content: space-between;
+      flex-shrink:1;
     }
     .description_element__title {
       font-family: $main_font;
@@ -57,14 +60,19 @@
       letter-spacing: 0;
       text-align: left;
     }
-    .route {
-      width: 11.7vw;
-    }
-    .length {
-      width: 11.7vw;
-    }
-    .stops {
-      width: 11.7vw;
-    }
+  }
+  .route, .stops{
+    width: 100px;
+    flex-shrink:1;
+  }
+  .length{
+    width: 60px;
+    flex-shrink:1;
+  }
+}
+
+@media (max-width: $mobile_width_screen) {
+  .card{
+    padding: 10px;
   }
 }
