--- a/src/components/filter/filter.module.scss
+++ b/src/components/filter/filter.module.scss
@@ -20,10 +20,11 @@
   }
   .checkbox_wrapper {
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     position: relative;
     cursor: pointer;
     padding-left: 30px;
+    padding-bottom: 10px;
     label {
       display: block;
       font-family: $main_font;
@@ -33,7 +34,6 @@
       letter-spacing: 0;
       cursor: pointer;
     }
-
     .checkbox_custom {
       margin-right: 10px;
       position: absolute;
@@ -56,12 +56,13 @@
       box-shadow: 0 2px 8px 0 $active_shadow_color;
       border-color: $active_color;
     }
-
   }
   :last-child {
     margin-bottom: 0;
   }
-
+  :hover{
+    background-color: #F1FCFF; ;
+  }
 }
 
 @media (max-width: $mobile_width_screen) {
