resolved 3 of 6 mistakes

--- a/src/components/filter/Filter.module.scss
+++ b/src/components/filter/Filter.module.scss
@@ -1,4 +1,4 @@
-@import 'src/services/style/variables';
+@import '../../services/style/Variables';
 .filter {
   display: flex;
   flex-direction: column;
