--- a/src/components/main-content/MainContent.module.scss
+++ b/src/components/main-content/MainContent.module.scss
@@ -1,4 +1,4 @@
-@import 'src/services/style/variables';
+@import '../../services/style/Variables';
 .mainContent_wrapper {
   display: flex;
   .mainContent_aside {
