--- a/src/components/app/App.module.scss
+++ b/src/components/app/App.module.scss
@@ -1,4 +1,4 @@
-@import 'src/services/style/variables';
+@import '../../services/style/Variables';
 .app_wrapper {
   max-width: 754px;
   margin: 0 auto;
