--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -1,4 +1,4 @@
-@import 'src/services/style/variables';
+@import '../../services/style/Variables';
 .card {
   display: flex;
   flex-direction: column;
