--- a/src/components/error-empty-tickets/ErrorEmptyTickets.module.scss
+++ b/src/components/error-empty-tickets/ErrorEmptyTickets.module.scss
@@ -1,4 +1,4 @@
-@import 'src/services/style/variables';
+@import '../../services/style/Variables';
 .alert_wrapper{
   width: 500px;
   margin: 0 auto;
