--- a/src/components/load-tickets-button-filter/LoadTicketsButtonFilter.module.scss
+++ b/src/components/load-tickets-button-filter/LoadTicketsButtonFilter.module.scss
@@ -1,4 +1,4 @@
-@import 'src/services/style/variables';
+@import '../../services/style/Variables';
 .load_tickets_filter_wrapper {
   align-self: center;
   .load_tickets_filter_button {
