--- a/src/components/load-tickets-button/load-tickets-button.module.scss
+++ b/src/components/load-tickets-button/load-tickets-button.module.scss
@@ -1,4 +1,4 @@
-@import 'src/services/style/variables';
+@import '../../services/style/Variables';
 .load_tickets__wrapper {
   width: 500px;
   align-self: center;
