--- a/src/components/show-more-button/ShowMoreButton.module.scss
+++ b/src/components/show-more-button/ShowMoreButton.module.scss
@@ -1,4 +1,4 @@
-@import 'src/services/style/variables';
+@import '../../services/style/Variables';
 .show_more_tickets__wrapper {
   width: 100%;
   align-self: center;
