--- a/src/components/tab/Tab.module.scss
+++ b/src/components/tab/Tab.module.scss
@@ -1,4 +1,4 @@
-@import 'src/services/style/variables';
+@import '../../services/style/Variables';
 .tab_wrapper {
   display: flex;
   flex-direction: column;
